chore: Update continue_config.yml to disable default build and test parameters

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -217,12 +217,14 @@ workflows:
               image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
       # -- Blender -- #
       - blender
-  release-workflow:
-    jobs:
       # -- Publish -- #
-      - publish-github-release
-          # filters:
-          #   branches:
-          #     ignore: /.*/
-          #   tags:
-          #     only: /^v\d+\.\d+\.\d+/
+      - publish-github-release:
+          requires:
+            - blender
+            - unreal-windows
+            - unreal-linux
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v\d+\.\d+\.\d+/
