--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -206,23 +206,23 @@ jobs:
 workflows:
   plugin-workflow:
     jobs:
-      # -- Unreal -- #
-      - test-self-host
-      - unreal-windows:
-          requires:
-            - test-self-host
-      - unreal-linux:
-          matrix:
-            parameters:
-              image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
+      # # -- Unreal -- #
+      # - test-self-host
+      # - unreal-windows:
+      #     requires:
+      #       - test-self-host
+      # - unreal-linux:
+      #     matrix:
+      #       parameters:
+      #         image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
       # -- Blender -- #
       - blender
       # -- Publish -- #
       - publish-github-release:
           requires:
             - blender
-            - unreal-windows
-            - unreal-linux
+            # - unreal-windows
+            # - unreal-linux
           filters:
             branches:
               ignore: /.*/
