--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,3 +21,8 @@ workflows:
             xrfeitoria/.* run-blender-test true
             tests/unreal/.* run-unreal-test true
             tests/blender/.* run-blender-test true
+          filters:
+            branches:
+              only: /.*/
+            tags:
+              only: /.*/
