chore: Update GitHub Release CLI to version v0.16.2

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -183,11 +183,21 @@ jobs:
 
   publish-github-release:
     docker:
-      - image: cibuilds/github:0.10
+      - image: cibuilds/base:latest
     steps:
       - checkout
       - attach_workspace:
           at: ./artifacts
+      - run:
+          name: "Get GitHub Release CLI"
+          command: |
+            # https://github.com/tcnksm
+            GHR_VERSION="v0.16.2"
+            GHR_URL="https://github.com/tcnksm/ghr/releases/download/v${GHR_VERSION}/ghr_v${GHR_VERSION}_linux_amd64.tar.gz"
+            wget "$GHR_URL" && \
+              tar xzf ghr_v${GHR_VERSION}_linux_amd64.tar.gz && \
+              mv ghr_v${GHR_VERSION}_linux_amd64/ghr /usr/bin/ghr && \
+              rm -r ghr_v${GHR_VERSION}_linux_amd64.tar.gz ghr_v${GHR_VERSION}_linux_amd64/
       - run:
           name: "Publish Release on GitHub"
           command: |
